--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
             text-align: center;
             color: white;
             font-weight: 900;
-            font-size: 5vw;
+            font-size: 350%;
             pointer-events: none;
 }
 @keyframes fadeIn {
