--- a/www.excv4.net/style.css
+++ b/www.excv4.net/style.css
@@ -33,7 +33,7 @@ ul li a{
 }
 #marker{
     position: absolute;
-    top: 0;
+    top: 10px;
     margin-top: -5px;
     /*width:100px;*/
     height: 50px;
